--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Read Me</title>
+    <title>SheIn Clone</title>
 </head>
 <body>
-    <h2>Well done Amanda</h2>
-
+    <h1>The best SheIn Clone on the Net!!!</h1>
+    <h4>Guide to our using our site</h4>
     <h4>Users</h4>
+    <ul>
+        <li><span>GET (home): </span> /</li>
+        <li><span>GET: </span> /users</li>
+        <li><span>GET: </span> /users/:userI_id</li>
+        <li><span>POST: </span>/users/register</li>
+        <li><span>PATCH: </span>/users/login</li>
+        <li><span>PUT: </span>/users/:user_id</li>
+        <li><span>DELETE: </span>/users/:user_id</li>
+        <li><span>GET: </span>/users/:user_id/cart</li>
+        <li><span>POST: </span>/users/:user_id/cart</li>
+        <li><span>PUT: </span>/users/:user_id/cart</li>
+        <li><span>DELETE: </span>/users/:user_id/cart</li>
+    </ul>
     <h4>Products</h4>
+    <ul>
+        <li><span>GET: </span>/products</li>
+        <li><span>GET: </span>/products/:product_id</li>
+        <li><span>POST: </span>/products</li>
+        <li><span>PUT: </span>/products/:product_id</li>
+        <li><span>DELETE: </span>/products/:product_id</li>
+    </ul>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
