--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>SheIn Clone</title>
+    <style>
+   body{
+    background-image: url("https://i.postimg.cc/mZmZcDp7/Landing-page.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+   }
+   h1, h4  {
+    color: rgb(0, 255, 8);
+   }
+   
+
+   li{
+    color: white;
+    font-weight: bold;
+   }
+        </style>
 </head>
 <body>
-    <h1>The best SheIn Clone on the Net!!!</h1>
-    <h4>Guide to our using our site</h4>
-    <h4>Users</h4>
-    <ul>
+    <h1>Guide to  using our site</h1>
+    <h4 style="margin-top: 5rem;">Users</h4>
+    <ul >
         <li><span>GET (home): </span> /</li>
         <li><span>GET: </span> /users</li>
         <li><span>GET: </span> /users/:userI_id</li>
@@ -22,20 +38,21 @@
         <li><span>POST: </span>/users/:user_id/cart</li>
         <li><span>PUT: </span>/users/:user_id/cart</li>
         <li><span>DELETE: </span>/users/:user_id/cart</li>
-    </ul>
-    <h4>Products</h4>
+        </ul>
+        <h4>Products</h4>
     <ul>
         <li><span>GET: </span>/products</li>
         <li><span>GET: </span>/products/:product_id</li>
         <li><span>POST: </span>/products</li>
         <li><span>PUT: </span>/products/:product_id</li>
         <li><span>DELETE: </span>/products/:product_id</li>
-    </ul>
-</body>
-</html>
-
-
-
+        </ul>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        </body>
+        </html>
+        
+        
+        
 
 
 
